# GNN-PedestrianPaths

./: README.md  basic.py  changed_attention_mechanism.py  changed_embedding.py  pyproject.toml  requirements.txt
