[tool.poetry]
name = "gnn-pedestrianpaths"
version = "0.1.0"
description = ""
authors = ["elden-l0rd <cfhuangx9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
